syntax = "proto3";

package kitchen.v1;

import "google/protobuf/empty.proto";
import "proto/order/order.proto";

option go_package = "orderService/kitchen";

service KitchenService {
  rpc ProcessOrder(order.Order) returns (ProcessOrderResponse) {}
  rpc ChangeOrderStatus(order.ChangeOrderStatusRequest) returns (google.protobuf.Empty) {}
}

message ProcessOrderResponse {
  string id = 1;
  string status = 2;
}


